2009-09-17  Murray Cumming  <murrayc@murrayc.com>

	Do not put a generated ChangeLog in the tarball.
 
	* Makefile.am: Remove the include of dist-changelog.am becaise I do not 
	want some crappy generated ChangeLog based on random vague commit 
	messages that can't be corrected later. I fight entropy. murrayc.

0.15.1:

2009-09-14  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/goocanvasmm/init.cc:
	* goocanvas/src/linedash.hg: Fix some warnings found during distcheck.

2009-08-24  Murray Cumming  <murrayc@murrayc.com>

	Fix the install.

	* goocanvas/goocanvasmm/Makefile.am: Do not mention wrap_init.h here, 
	to avoid an error about a duplicate mention during install.

0.15:

2009-07-07  Murray Cumming  <murrayc@murrayc.com>

	Image: Added the scale-to-fit property.

	* goocanvas/src/libgda_signals.defs: Regenerated.
	* goocanvas/src/image.hg, imagemodel.hg: Add the scale-to-fit property.

2009-07-05  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with the normal API again, and fix some whitespace.

2009-07-05  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with disabled 
	exceptions and disabled properties API. It is not pretty. 

	* examples/coordinates/window.cc:
	* examples/custom_item/examplewindow.cc:
	* examples/demo/primitives.cc:
	* examples/drag_to_canvas/examplewindow.cc:
	* examples/moving_shapes/window.cc:
	* examples/simple/examplewindow.cc:
	* examples/table/examplewindow.cc:
	* examples/tablemodel/examplewindow.cc:
	* examples/text/window.cc:
	* goocanvas/src/polyline.ccg:
	* goocanvas/src/polylinemodel.ccg: Added ifdefs.

2009-05-18  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/item.ccg: Item_Class::get_items_at_vfunc_callback():
	Added a return 0 to avoid a compiler warning. Bug #582996 (Vincent Untz)

0.14.0:

2009-03-25  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/Makefile.am:
	* goocanvas/src/libgoocanvas.defs:
	* goocanvas/src/libgoocanvas_fake_properties.defs: Added this file, 
	written by hand.