@@ -1,13 +1,13 @@
-#ifndef _LIBGDAMM_CONFIG_H
-#define _LIBGDAMM_CONFIG_H 1
+#ifndef _GOOCANVASMM_CONFIG_H
+#define _GOOCANVASMM_CONFIG_H 1
 
 #include "glibmmconfig.h"
 
 /* version numbers */
-#undef LIBGDAMM_MAJOR_VERSION
-#undef LIBGDAMM_MINOR_VERSION
-#undef LIBGDAMM_MICRO_VERSION
-#undef LIBGDAMM_VERSION
+#undef GOOCANVASMM_MAJOR_VERSION
+#undef GOOCANVASMM_MINOR_VERSION
+#undef GOOCANVASMM_MICRO_VERSION
+#undef GOOCANVASMM_VERSION
 
-#endif /* _LIBGDAMM_CONFIG_H */
+#endif /* _GOOCANVASMM_CONFIG_H */
 
